--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "bootstrap": "^5.2.2",
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "any",
     "react-dom": "^18.2.0",
+    "react-faq": "^1.0.23",
     "react-faq-component": "^1.3.4",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.2",
