--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bootstrap": "^5.2.2",
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
-    "react-bootstrap": "any",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-faq": "^1.0.23",
     "react-faq-component": "^1.3.4",
